--- a/source/index.jade
+++ b/source/index.jade
@@ -5,6 +5,8 @@ html(lang="en")
         meta(name="viewport", content="width=device-width, initial-scale=1.0")
         meta(http-equiv="X-UA-Compatible", content="ie=edge")
         title Document
+        link(rel="stylesheet", href="css/all.css")
+        script(src="js/all.js")
     body
         br 
         p Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptate, laudantium deleniti magnam ad eos officiis, vitae tempora, nesciunt libero pariatur ab et nam labore est minima facere rem fuga necessitatibus
